@@ -3,7 +3,8 @@ MemeMaker
 
 ### An ultra-fluid image editor for making memes
 
- ![The App Icon](/MemeMaker/icon.png)
+- [View all hotkeys](#shortcuts)
+- [Compile and Run the source code]()
 
 > [!NOTE]
 > In the following text, _objects_ refer to _images_ or _texts_ placed on the canvas.  
@@ -13,9 +14,8 @@ MemeMaker
 > Making any object excessively large will cause the application to freeze. Stay within a 4000 \* 4000 resolution canvas size.
 
 Reposition, resize images and add texts with minimum effort! Meme maker is an app to put together memes in the quickest possible time. It allows fast resizing and repositioning of texts and images, and also a fluid resizing feature for the image canvas. Only the canvas area is renderable.
-[View all hotkeys](https://github.com/areebuzair/MemeMaker/blob/main/readme.md#shortcuts)
   
-The UI includes:
+## UI Description
 
 #### Assets:
 
@@ -37,7 +37,7 @@ Save the canvas as an image. Only the parts inside the canvas will be saved.
 
 * * *
 
-### Shortcuts
+## Shortcuts
 
 What sets MemeMaker apart is its multitudes of shortcuts. These are:
 
@@ -84,5 +84,24 @@ Press CONTROL+s
 #### Accessing the documentation:
 
 Press CONTROL+h  
+
+* * *
+
+## Compile and Run Source Code
+
+This code is written using Java 19.0.1 and JavaFX version 21.0.2 on Windows Visual Studio code.
+
+To compile and run the source code, run the following commands in the command prompt after installing Java and JavaFX:
+```
+javac --module-path "PathToLib" --add-modules=javafx.controls,javafx.fxml,javafx.swing src\MemeMaker\*.java -d classes
+copy src\MemeMaker\*.fxml classes\MemeMaker\*.fxml
+copy src\MemeMaker\*.png classes\MemeMaker\*.png
+copy src\MemeMaker\*.css classes\MemeMaker\*.css
+md app
+jar --create --file=app/MemeMaker.jar --main-class=MemeMaker.Main -C classes .
+java --module-path "PathToLib" --add-modules=javafx.controls,javafx.fxml,javafx.swing -jar app/MemeMaker.jar
+```
+> [IMPORTANT]
+> Replace "PathToLib" with the location to the lib folder of your JavaFX SDK. It should look something like: C:\downloads\javafx-sdk-21.0.2\lib
   
 Thanks from Team Meme Addicts.
